# config-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
src/config_sync/: __init__.py  cli.py  detectors.py  generators.py
tests/: test_cli.py  test_detectors.py  test_generators.py
tests/fixtures/sample_rules/.claude/rules/: architecture.md
