[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-sync"
version = "1.0.0"
description = "Generate AI coding assistant config files from a single source. 12 tools, 1 command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "coding", "config", "claude", "codex", "gemini", "cursor", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[project.scripts]
config-sync = "config_sync.cli:main"

[project.urls]
Homepage = "https://github.com/nadalpiantini/config-sync"
Repository = "https://github.com/nadalpiantini/config-sync"
Issues = "https://github.com/nadalpiantini/config-sync/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
